# quant-agent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SPEC.md  findings.md  progress.md  pyproject.toml  task_plan.md
config/: account.yaml.example  default.yaml  strategy.yaml
docs/: cron.example.md  go_live_todo.md
skills/quant-agent/: SKILL.md
src/: __init__.py
src/agent/: cli.py  orchestrator.py
src/common/: __init__.py  config.py  models.py
src/data/: __init__.py  adata_adapter.py  db.py  provider_base.py  repositories.py  runtime.py  schema.py  xtdata_adapter.py
src/execution/: __init__.py  approval.py  broker_base.py  broker_factory.py  broker_shadow.py  broker_xtquant.py  order_state_machine.py  reconcile.py  xtquant_preflight.py
src/memory/: conflict_resolver.py  event_gate.py  memory_store.py
src/monitoring/: alert_channel.py  auction_watch.py  intraday_watch.py  sector_watch.py
src/planning/: __init__.py  candidate_ranker.py  plan_generator.py  signal_engine.py
src/review/: __init__.py  postmortem.py  trade_review.py
tests/: conftest.py
tests/agent/: test_cli.py  test_execution_orchestrator.py  test_orchestrator.py  test_plan_only_orchestrator.py
tests/common/: test_config.py  test_imports.py  test_models.py
tests/data/: test_adata_adapter.py  test_provider_contracts.py  test_repositories.py  test_runtime.py  test_schema.py
tests/execution/: test_approval.py  test_broker_factory.py  test_broker_shadow.py  test_order_state_machine.py  test_reconcile.py  test_xtquant_preflight.py
tests/memory/: test_event_gate.py  test_memory_store.py
(+7 files in other folders)
