[project]
name = "quant-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "loguru",
    "numpy",
    "pandas",
    "pyyaml",
]

[project.scripts]
quant-agent = "src.agent.cli:main"

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
