[project]
name = "quant-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "loguru",
    "numpy",
    "pandas",
    "pyyaml",
]

[project.scripts]
quant-agent = "src.agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
]
research = [
    "adata",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
